--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,1 +1,8 @@
 @import 'tailwindcss';
+
+.oswald {
+	font-family: 'Oswald', serif;
+	font-optical-sizing: auto;
+	font-weight: 500;
+	font-style: normal;
+}
